gdk/wayland/gdkdisplay-wayland.c
@@ -45,6 +45,7 @@
 #include "pointer-gestures-unstable-v1-client-protocol.h"
 #include "tablet-unstable-v2-client-protocol.h"
 #include "xdg-shell-unstable-v6-client-protocol.h"
+#include "xdg-foreign-unstable-v1-client-protocol.h"
 
 /**
  * SECTION:wayland_interaction
@@ -432,6 +433,12 @@ gdk_registry_handle_global (void               *data,
       display_wayland->tablet_manager =
         wl_registry_bind(display_wayland->wl_registry, id,
                          &zwp_tablet_manager_v2_interface, 1);
+    }
+  else if (strcmp (interface, "zxdg_exporter_v1") == 0)
+    {
+      display_wayland->xdg_exporter =
+        wl_registry_bind (display_wayland->wl_registry, id,
+                          &zxdg_exporter_v1_interface, 1);
     }
   else
     handled = FALSE;
